--- a/src/less/variable.less
+++ b/src/less/variable.less
@@ -11,13 +11,20 @@
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              lighten(@gray-base, 20%);   // #333
 @gray:                   lighten(@gray-base, 33.5%); // #555
-@gray-light:             lighten(@gray-base, 55%); // #777
+@gray-light:             lighten(@gray-base, 70%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
 //** Theme 主题颜色
 @theme-color:            #0090e6;
 @theme-color-darker:     lighten(@theme-color, 13.5%);
 @theme-color-deeper:     #101348;
+
+//** Background 背景颜色
+@background-white:       #fff;
+@background-gray:        @gray-lighter;
+@background-theme:       @theme-color;
+@background-darker:      @theme-color-darker;
+@background-deeper:      @theme-color-deeper;
 
 //** Font 字体相关变量
 //字体系列
@@ -39,6 +46,11 @@
 //** Border 边框
 @border-color-base:      @gray-light;
 @border-weight-base:     1px;
+@border-solid-base:      @border-weight-base solid @border-color-base;
 
 //** BorderRadius 边框圆角
-@border-radius-base:     5px;    
+@border-radius-base:     5px;
+    
+//** BoxSizing 盒子模型
+@box-sizing-border:      border-box;    
+@box-sizing-content:     content-box;    
